# Tie

./: .gitignore  README.en.md  README.md  ai-plan.md  build.ps1  build.sh  dev.ps1  dev.sh  hub.html  index.html  package-lock.json  package.json  test-strategy.html  vite.config.ts
.github/workflows/: release.yml
.trae/documents/: i18n-cleanup-plan.md  i18n-impl-plan.md  i18n-plan.md
.trae/rules/: kdd-workflow.md
.trae/specs/ai-infra-natural-reminder/: checklist.md  spec.md  tasks.md
.trae/specs/sync-knowledge-base-v085-gap/: checklist.md  spec.md  tasks.md
.trae/specs/update-knowledge-base-v085/: checklist.md  spec.md  tasks.md
docs/: CNAME  ai-iteration-plan.md  app.js  competitor-analysis.html  index.html  style.css
docs/iteration-plan/: iteration-plan.html
docs/iteration-plan/assets/: charts.js
docs/knowledge-base/: README.md  boundaries.md  constraints.md  flows.md  glossary.md
docs/knowledge-base/adr/: README.md
docs/knowledge-base/lessons/: README.md
src/: api.ts  datetime-picker.ts  hub.ts  main.ts  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: ai_config.rs  ai_service.rs  commands.rs  git_ops.rs  git_sync.rs  locale_manager.rs  lunar_calendar.rs  mod.rs  note_service.rs  reminder_parser.rs  reminder_scheduler.rs  reminder_service.rs  report_generator.rs  shortcut_manager.rs  sync_config.rs  sync_json_io.rs  tray_manager.rs  window_manager.rs
src-tauri/src/application/prompts/: mod.rs  reminder.rs  report.rs  rewrite.rs  sniff.rs  sort.rs
src-tauri/src/domain/: mock_repo.rs  mod.rs  note.rs  reminder.rs  repositories.rs  template.rs  value_objects.rs
src-tauri/src/infrastructure/: database.rs  mod.rs  sqlite_note_repo.rs  sqlite_reminder_repo.rs  sqlite_template_repo.rs
src/i18n/: en.ts  index.ts  zh.ts
